--- a/sound/package.xml
+++ b/sound/package.xml
@@ -13,13 +13,13 @@
 	<build_depend>rospy</build_depend>
 	<build_depend>roscpp</build_depend>
 	<build_depend>numpy</build_depend>
-	<build_depend>cv_bridge</build_depend>
+	<!--<build_depend>cv_bridge</build_depend>-->
 
 	<run_depend>sensor_msgs</run_depend>
 	<run_depend>rospy</run_depend>
 	<run_depend>roscpp</run_depend>
 	<run_depend>numpy</run_depend>
-	<run_depend>cv_bridge</run_depend>
+	<!--<run_depend>cv_bridge</run_depend>-->
 	
 	<export></export>
 </package>
