--- a/beleg/package.xml
+++ b/beleg/package.xml
@@ -4,8 +4,8 @@
 	<version>1.0.0</version>
 	<description>Beleg</description>
 
-	<maintainer>Florian Sauer</maintainer>
-	<maintainer>Camilo Ocampo</maintainer>
+	<maintainer email="s0552569@htw-berlin.de">Florian Sauer</maintainer>
+	<maintainer email="s0546867@htw-berlin.de">Camilo Ocampo</maintainer>
 	<license>MIT</license>
 	
 	<buildtool_depend>catkin</buildtool_depend>
