--- a/sound/package.xml
+++ b/sound/package.xml
@@ -4,7 +4,8 @@
 	<version>0.1.0</version>
 	<description>Sound Player</description>
 
-	<maintainer email="baumannpa@gmail.com">Patrick Baumann</maintainer>
+	<maintainer email="s0552569@htw-berlin.de">Florian Sauer</maintainer>
+	<maintainer email="s0546867@htw-berlin.de">Camilo Ocampo</maintainer>
 	<license>MIT</license>
 
 	<buildtool_depend>catkin</buildtool_depend>
